5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4479/executions/1644_2703.log
== TEST (2019-04-09 16:56:43) 
-- CODE:
idade input(12)
if idade (12)
-- ERROR:
File "XXXX", line 1
    idade input(12)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:57:00) 
-- CODE:
idade input(12)
if idade (12)
-- EXECUTION TIME:
0.158808
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 1
    idade input(12)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
